--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import "tailwindcss";
 
@@ -7,6 +8,7 @@
   --font-outfit: "Outfit", sans-serif;
   --font-lexend: "Lexend Deca", sans-serif;
   --font-noto: "Noto Sans", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
 @utility no-scrollbar {
